# man pages for section 1
dist_man1_MANS = \
		svxlink.1 \
		remotetrx.1 \
		siglevdetcal.1 \
		qtel.1

# man pages for section 5
dist_man5_MANS = \
		svxlink.conf.5 \
		ModuleHelp.conf.5  \
		ModuleParrot.conf.5 \
		ModuleEchoLink.conf.5 \
		ModuleTclVoiceMail.conf.5 \
		ModuleDtmfRepeater.conf.5 \
		ModulePropagationMonitor.conf.5 \
		ModuleSelCallEnc.conf.5 \
		remotetrx.conf.5

EXTRA_DIST = Makefile.default